# RL-Project-101

./: .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  HOW_IT_WORKS.md  README.md  README_improved.md  __init__.py  client.py  entrypoint.sh  env_server_source.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  rewards.py  run.sh
server/: __init__.py  app.py  environment.py
tasks/: __init__.py  base_task.py  task1_single_zone.py  task2_variable_workload.py  task3_random_events.py
tests/: test_environment.py  test_models.py  test_physics.py  test_rewards.py
thermal/: __init__.py  constants.py  datacenter.py  physics.py
